[gd_scene load_steps=2 format=3 uid="uid://lcfxothp2kgy"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_abcde"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 70.0

[node name="HumansLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Humans: 0"

[node name="ZombiesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Zombies: 0"

[node name="PoliceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Police Officers: 0"
